--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     display: inline-flex;
     height: 50px;
     padding: 0;
-    background: #00A555;
+    background: #f0b1ea;
     border: none;
     outline: none;
     border-radius: 5px;
